[package]
name = "jvnc"
version = "0.1.0"
authors = ["Joshua M. Clulow <josh@sysmgr.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = [ "full" ] }
anyhow = "1"
async-stream = "0.3"
bytes = "1"
futures-core = "0.3"
futures = "0.3"
